--- a/treino2/Verificador_de_idade.html
+++ b/treino2/Verificador_de_idade.html
@@ -46,6 +46,6 @@
     <footer>
       <p>&copy; CursoemVideo</p>
     </footer>
-    <script src="treino2.js"></script>
+    <script src="Verificador_de_idade.js"></script>
   </body>
 </html>
